# mochi

./: .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  DESIGN.md  LICENSE  README.md  index.html  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vite.config.ts  vite.fix-nitro-rolldown.ts  vite.write-tauri-shell.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
Casks/: mochi-desktop.rb  mochi-unstable.rb  mochi.rb
app/: main.tsx  route-pending.tsx  routeTree.gen.ts  router.tsx  spa-shell-pending.tsx
coverage/: index.html  lcov.info
docs/: contributing.md  install.md  linux.md  provider-parity-matrix.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_branding.rs  frontend.rs  lib.rs  lifecycle.rs  linux_webkit.rs  linux_window_controls.rs  macos.rs  main.rs  window_policy.rs
src-tauri/src/auth/: credential_store.rs  mod.rs
src-tauri/src/browser/: catalog.rs  domains.rs  gecko.rs  import.rs  mod.rs  profiles.rs  safari.rs
src-tauri/src/browser/chromium/: decrypt.rs  discover.rs  macos.rs  mod.rs  stub.rs
src-tauri/src/browser/keychain/: linux.rs  macos.rs  mod.rs  stub.rs  windows.rs
src-tauri/src/cli/: mod.rs  usage.rs
src-tauri/src/core/: mod.rs  models.rs  provider.rs  provider_metadata.rs  registry.rs  statuspage.rs  test_env.rs  usage_repository.rs  usage_state.rs  usage_store.rs
src-tauri/src/diagnostics/: log.rs  mod.rs  report.rs  state.rs
src-tauri/src/providers/: credential_probe.rs  mod.rs  static_provider.rs
src-tauri/src/providers/antigravity/: mod.rs  probe.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/antigravity/fixtures/: user_status.json
src-tauri/src/providers/augment/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/augment/fixtures/: auggie_status.txt  credits.json  subscription.json
src-tauri/src/providers/claude/: mod.rs  usage_parse.rs
src-tauri/src/providers/claude/fixtures/: credentials.json  oauth_usage.json  organizations.json  web_usage.json
src-tauri/src/providers/claude/oauth/: client.rs  credentials.rs  mod.rs  strategy.rs
src-tauri/src/providers/claude/web/: client.rs  credentials.rs  mod.rs  strategy.rs
src-tauri/src/providers/codex/: cli_rpc.rs  cookies.rs  cost.rs  mod.rs  oauth.rs  parse.rs
src-tauri/src/providers/codex/cookies/: client.rs  credentials.rs  mod.rs  parse.rs  strategy.rs
src-tauri/src/providers/codex/fixtures/: auth.json  dashboard_usage.html  oauth_usage.json  rate_limits.json  session.jsonl  statuspage.json
src-tauri/src/providers/codex/oauth/: client.rs  credentials.rs  mod.rs  parse.rs  strategy.rs
src-tauri/src/providers/copilot/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/copilot/fixtures/: usage_chat_only.json  usage_monthly_quotas.json  usage_premium_chat.json
src-tauri/src/providers/cursor/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/cursor/fixtures/: usage_summary.json  usage_summary_minimal.json
src-tauri/src/providers/factory/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/factory/fixtures/: auth_me.json  usage.json
src-tauri/src/providers/gemini/: client.rs  credentials.rs  mod.rs  oauth_client.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/gemini/fixtures/: load_code_assist_standard.json  oauth_creds.json  quota_response.json
src-tauri/src/providers/kiro/: mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/kiro/fixtures/: usage_basic.txt  usage_bonus.txt
src-tauri/src/providers/opencode/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs  zen_balance.rs
src-tauri/src/providers/opencodego/: credentials.rs  mod.rs  strategy.rs
src-tauri/src/providers/zai/: client.rs  credentials.rs  mod.rs  strategy.rs  usage_parse.rs
src-tauri/src/providers/zai/fixtures/: quota_response.json
src-tauri/src/settings/: codexbar_import.rs  commands.rs  mod.rs  storage.rs
src-tauri/src/status/: mod.rs  refresh_controller.rs
src-tauri/src/status_bar/: mod.rs
src-tauri/src/tray/: icon.rs  macos_app_window.rs  macos_window_shape.rs  menu_bar_metric.rs  mod.rs  panel.rs  presentation.rs  usage.rs  vibrancy.rs  window_transparency.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/widget/: commands.rs  mod.rs
src-tauri/tests/: cli_smoke.rs
(+761 files in other folders)
