[package]
name = "mochi"
version = "0.1.0"
description = "Soft alerts before hard limits."
authors = ["Mochi contributors"]
edition = "2021"

[lib]
name = "mochi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-updater = "2"
resvg = "0.44"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
tiny-skia = "0.11"
usvg = "0.44"
tokio = { version = "1.41", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = { version = "0.12", features = ["sha1"] }
regex = "1.11"
sha1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
